--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "frontend-startup-islandgames",
+    "name": "frontend-sample",
     "private": true,
     "version": "0.0.1",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "start": "vite",
-        "build": "tsc && vite build",
+        "build": "tsc -b && vite build",
         "preview": "vite preview",
         "format": "prettier --write .",
         "lint": "eslint .",
@@ -16,6 +16,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.0.1",
         "classnames": "^2.5.1",
+        "frontend-sample": "file:",
         "frontend-startup-islandgames": "file:",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
