--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.0.1",
         "classnames": "^2.5.1",
+        "framer-motion": "^12.4.1",
         "frontend-sample": "file:",
-        "frontend-startup-islandgames": "file:",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-google-recaptcha": "^3.1.0",
         "react-redux": "^9.1.0",
-        "react-router-dom": "^7.0.1"
+        "react-router-dom": "^7.0.1",
+        "react-router-hash-link": "^2.4.3"
     },
     "devDependencies": {
         "@testing-library/dom": "^9.3.4",
@@ -32,7 +32,6 @@
         "@types/node": "^22.9.0",
         "@types/react": "^18.2.47",
         "@types/react-dom": "^18.2.18",
-        "@types/react-google-recaptcha": "^2.1.9",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
